--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -4,10 +4,10 @@
 #
 server.name: kibana
 server.host: "0"
-elasticsearch.hosts: [ "http://elasticsearch:9200" ]
-xpack.monitoring.ui.container.elasticsearch.enabled: true
+elasticsearch.hosts: [ "http://es01:9200" ]
+#xpack.monitoring.ui.container.elasticsearch.enabled: true
 
 ## X-Pack security credentials
 #
-elasticsearch.username: elastic
-elasticsearch.password: changeme
+#elasticsearch.username: elastic
+#elasticsearch.password: changeme
