--- a/filebeat/modules/suricata/suricata.yml
+++ b/filebeat/modules/suricata/suricata.yml
@@ -8,4 +8,4 @@
 
     # Set custom paths for the log files. If left empty,
     # Filebeat will choose the paths depending on your OS.
-    var.paths: ["/var/log/suricata/*"]
+    var.paths: ["/var/log/suricata/eve.json"]
