adding autmatic dashboard creation in filebeat, and adding connection to es02

--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -102,7 +102,7 @@ setup.template.settings:
 # These settings control loading the sample dashboards to the Kibana index. Loading
 # the dashboards is disabled by default and can be enabled either by setting the
 # options here or by using the `setup` command.
-#setup.dashboards.enabled: false
+setup.dashboards.enabled: true
 
 # The URL from where to download the dashboards archive. By default this URL
 # has a value which is computed based on the Beat name and version. For released
@@ -147,7 +147,7 @@ setup.kibana:
 #-------------------------- Elasticsearch output ------------------------------
 output.elasticsearch:
   # Array of hosts to connect to.
-  hosts: ["es01:9200"]
+  hosts: ["es01:9200","es02:9200"]
 
   # Protocol - either `http` (default) or `https`.
   #protocol: "https"
